  transport layer, such as TCP/UDP sockets and SSL).
  This allows maximum flexibility while maintaining a very simple API.
  Even with this simple API you can implement any security depth you like:
  - unencrypted using HTTP over UDP sockets
  - unencrypted using HTTP via TCP sockets
  - encrypted using HTTP via SSL
  - encrypted using HTTP via SSL while checking certificates


2004/05/07: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/db: added function GWEN_DB_VariableName (I couldn't believe that
  this function did not exist ;-)
- started working on IPC stuff again, this time based on HTTPS, therefore
  added ipc/netconnectionhttp (implements the HTTP protocol, together with
  the transport layer NetTransportSSL we have HTTPS ;-)
- io/bio_buffer: added constructor which does NOT take over ownership


2004-05-07   Christian Stimming <stimming@tuhh.de>

	* src/Makefile.am: For windows DLLs, create the def and lib files
	with the filename including the SO_EFFECTIVE number as well,
	because otherwise linking against it doesn't work.


2004/05/06: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- more strict usage of *_p.h files. These files should nly be included by
  their matching code file (and by no other file).
  Therefore: created some *_l.h files for prototypes of functions private
  to the library.
- crypt/ossl/nettransportssl.{c,h}: improved this module a lot. It can now at
  least be used for client connections.
- ssl module is now able to save certificates if demanded by the user
- added parser/base64. This is not an elegant implementation but it
  works ;-) (Currently I don't have the time for a more elaborated version)
- tried some Darwin fixes (still minimun success, that system is quite 
  different in some aspects. However, the configure script runs).


2004-05-05   Christian Stimming <stimming@tuhh.de>

	* src/*: Remove trailing semicolons from macro calls where