@@ -129,6 +129,7 @@ GWENHYWFAR_API
 GWEN_NETTRANSPORT *GWEN_NetTransportSSL_new(GWEN_SOCKET *sk,
                                             const char *capath,
                                             const char *ownCertFile,
+                                            const char *dhfile,
                                             int secure,
                                             int takeOver);
 
